Money Manager 20.2.0
* Update shortcuts to avoid conflicts with TextField
* Incomes and Expenses window
* Counterparty filter in request window
* Source code cleanup
* Using JavaFX Maven plugin
* IDEA project files added to Git