@@ -8,10 +8,10 @@ $JPACKAGE_HOME/bin/jpackage \
     --verbose \
     --dest target/dist \
     -p target/jmods \
-    --java-options "--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls --add-reads org.panteleyev.mysqlapi=org.panteleyev.money.model -Dfile.encoding=UTF-8" \
+    --java-options "--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls -Dfile.encoding=UTF-8" \
     --icon icons/icons.ico \
     --name "Money Manager" \
-    --app-version 20.1.0 \
+    --app-version 20.2.0 \
     --vendor panteleyev.org \
     --win-menu \
     --win-dir-chooser \
